Fixed overflow occurring on pages that shouldn't have enough content to trigger one. Also:
- Removed `empty.css`, as it is no longer needed due to this fix.
- Adjusted size of pronouns.page banner and positioning of footer on `identity.html`, removing overflow on 1080p+ without significantly reducing image size.
- Further adjusted account list positioning.

--- a/static/css/extensions/accounts.css
+++ b/static/css/extensions/accounts.css
@@ -5,8 +5,8 @@
     flex: 1;
     list-style-type: none;
     text-align: center;
-    margin-right: -0.5em;
-    margin-left: -0.5em;
+    margin-right: -0.4em;
+    margin-left: -0.7em;
     margin-top: 1em;
 }
 li.entry {
@@ -24,7 +24,7 @@ li.child-entry {
 li.entry a, li.child-entry a { cursor: pointer; }
 
 /* DESCRIPTION STYLING */
-.text-column { flex: 7; }
+#account-description { flex: 7; }
 
 /* BUTTON STYLING */
 #account-button {
